--- a/transformer.tex
+++ b/transformer.tex
@@ -1,5 +1,6 @@
 \documentclass{standalone}
-\usepackage[T1]{fontenc}\usepackage{tikz}
+\usepackage[T1]{fontenc}
+\usepackage{tikz}
 \usepackage{amsmath, amsfonts}
 \usetikzlibrary{arrows.meta}
 \begin{document}
@@ -92,6 +93,7 @@
 	\node[text width=2.000000cm, anchor=west] at (6.750000,0.600000) {Positional \vspace{-0.05cm} \linebreak Encoding};
 \end{tikzpicture}
 \end{document}
+
 
 
 
