docs: Add link to all examples and create template files

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,5 @@
 % !TeX program = LuaLaTeX
-
 \documentclass{article}
-
 
 \usepackage{xcolor}
 \usepackage{float}
@@ -24,14 +22,11 @@
 \setmainfont{Latin Modern Roman}
 \title{My Tikz Learning}
 \author{Yangyang Li}
-
+\date{\today}
 
 \begin{document}
-
 \maketitle
-
 \clearpage
-
 \tableofcontents
 
 % <!-- begin content -->
@@ -84,51 +79,6 @@
 
 
 \end{document}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
