style: Add tikzpeople and quotes libraries to main.tex

--- a/template/main.tex
+++ b/template/main.tex
@@ -9,10 +9,12 @@
 \usepackage{standalone}
 \usepackage{tkz-graph}
 \usepackage{amsmath,amssymb}
+\usepackage{tikzpeople}
+
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
-\usetikzlibrary{shapes}
+\usetikzlibrary{shapes, quotes}
 \usetikzlibrary{graphs,graphdrawing}
 \usegdlibrary {trees}
 
