feat: Add smiley and animal drawings to tikz picture

--- a/template/main.tex
+++ b/template/main.tex
@@ -14,9 +14,11 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
-\usetikzlibrary{shapes, quotes}
+\usetikzlibrary{shapes}
+\usetikzlibrary{quotes}
 \usetikzlibrary{graphs,graphdrawing}
 \usegdlibrary {trees}
+\usepackage{pgfplots}
 
 \usepackage[colorlinks=true]{hyperref}
 
