--- a/latex_graphics_tikz_book3.tex
+++ b/latex_graphics_tikz_book3.tex
@@ -1,5 +1,4 @@
 % !TeX program = lualatex
-
 \documentclass[tikz,border=10pt]{standalone}
 \usepackage{tkz-graph}
 \usepackage{amsmath,amssymb}
@@ -7,6 +6,7 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning, quotes}
 \usetikzlibrary{arrows.meta}
+\usetikzlibrary{tikzlings}
 
 \tikzset{mytext/.style = {font=\sffamily\bfseries, text=white},
         vertex/.style = {mytext, shape=circle, ball color = #1},
@@ -48,7 +48,35 @@
 	(D) edge [bridge] node [number] {7} (A);
 \end{tikzpicture}
 
+\tikzset{smiley/.pic={
+			\draw[shading=ball, ball color=yellow] (0,0) circle [radius=2];
+			\draw[shading=ball, ball color=black] (-0.5,0.5,0) ellipse [x radius=0.2, y radius=0.4];
+			\draw[shading=ball, ball color=black] (0.5,0.5,0) ellipse [x radius=0.2, y radius=0.4];
+			\draw[very thick] (-1,-1) arc [start angle=185, end angle=355, x radius=1, y radius=0.5];}}
 
+
+\begin{tikzpicture}
+	\draw pic {smiley}
+	(2,2) pic[scale=0.5, rotate=-30] {smiley}
+	(-2, 1.5) pic [scale=0.3, rotate=30] {smiley}
+	(-1.6, 2) pic [scale=0.15, rotate=-20] {smiley}
+	(0, 2) pic [scale= 0.2, rotate=-10] {smiley};
+\end{tikzpicture}
+
+
+\tikzset{mygrid/.pic = {
+			\draw[thin, dotted] (-3, -3) grid (3,3);
+			\draw [->] (-3, 0) -- (3,0);
+			\draw [->] (0, -3) -- (0,3); }}
+
+\begin{tikzpicture}
+	\draw pic {mygrid}
+	(-1,0)  pic {chicken}
+	(1,0)   pic {pig}
+	(-2,-2) pic {bear}
+	(0,-2)  pic {penguin}
+	(2,-2)  pic {owl};
+\end{tikzpicture}
 
 
 \end{document}
