style: Remove unnecessary tikz libraries and update code

--- a/template/main.tex
+++ b/template/main.tex
@@ -17,7 +17,8 @@
 \usetikzlibrary{shapes}
 \usetikzlibrary{quotes}
 \usetikzlibrary{graphs,graphdrawing}
-\usegdlibrary {trees}
+\usetikzlibrary{trees}
+\usetikzlibrary{graphs}
 \usepackage{pgfplots}
 
 \usepackage[colorlinks=true]{hyperref}
