--- a/latex_graphics_tikz_book4.tex
+++ b/latex_graphics_tikz_book4.tex
@@ -4,13 +4,135 @@
 \usepackage{xcolor}
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
+\usetikzlibrary{trees}
+\usetikzlibrary{mindmap}
+\usetikzlibrary{graphs}
+\usetikzlibrary{quotes}
+\usetikzlibrary{matrix}
+
+\usepackage{hvlogos}
 
 \begin{document}
-
 
 \begin{tikzpicture}
 	\node {A} child {node {1} edge from parent [dashed, ->]
 			node [above, sloped, font=\tiny]{down}};
+\end{tikzpicture}
+
+
+\begin{tikzpicture}
+	\node {A}
+	child {node {1}}
+	child {node {2}}
+	child {node {3}}
+	child {node {4}}
+	child {node {5}}
+	;
+\end{tikzpicture}
+
+\begin{tikzpicture}[thick]
+	\node [draw, black, rectangle ]  {A}
+	[red, ->]
+	child  {node {1}}
+	child  {node {2}}
+	child [densely dashed]
+		{node [draw, blue, circle] {3}}
+	child {node {4}}
+	child {node {5}}
+	;
+\end{tikzpicture}
+
+\begin{tikzpicture}
+	\node {\TeX}
+	child { node {\LaTeX}}
+	child {node {\ConTeXt}}
+	;
+\end{tikzpicture}
+
+\begin{tikzpicture}[
+		level 1/.style = { level distance = 8mm, sibling distance = 20mm},
+		level 2/.style = {level distance = 10mm, sibling distance = 20mm},
+		treenode/.style = {shape = rectangle , rounded corners, draw, top color=white, bottom color = blue!30},
+		every child node/.style = {treenode},
+		engine/.style = {inner sep=1pt, font=\tiny, above}
+	]
+
+	\node[treenode] {\TeX}
+	child {node {\LaTeX}
+			child {node {\pdfLaTeX} edge from parent node [engine, sloped] {\pdfTeX}}
+			child {node {\XeLaTeX} edge from parent node [engine, left] {\XeTeX}}
+			child {node {\LuaLaTeX} edge from parent node[engine, sloped]  {\LuaTeX}}
+		}
+	child {node {\ConTeXt}}
+	;
+\end{tikzpicture}
+
+
+\begin{tikzpicture}[
+		mindmap,
+		text=white,
+		concept color=blue!50,
+		nodes = {concept},
+		root/.append style  = {font=\Huge\sffamily\bfseries},
+		level 1 concept/.append style={font=\Large\sffamily, sibling angle=90},
+		level 2 concept/.append style={font=\normalsize\sffamily}]
+	\node [root] {TikZ} [clockwise from=0]
+	child [concept, color=blue] {
+			node {Graphs} [clockwise from=90]
+			child { node {Trees} }
+			child { node {Mind maps}}
+			child { node {DOT syntax}}
+			child { node {Algorithms}}
+		};
+\end{tikzpicture}
+
+\begin{tikzpicture}[nodes = {text depth = 1ex, text height=2ex}]
+	\graph {tex -> dvi -> ps -> pdf,
+		bib -> bbl,
+		bbl -> dvi,
+
+	};
+\end{tikzpicture}
+
+\begin{tikzpicture}
+	\graph [grow right=2cm] { tex -> {dvi, pdf } -> html };
+\end{tikzpicture}
+
+
+\begin{tikzpicture}[every edge quotes/.style = {font=\tiny\ttfamily, above, inner sep=1pt}]
+	\graph [grow right=2cm] { tex -> ["latex"] dvi -> ["dvips"] ps -> ["ps2pdf"] pdf };
+\end{tikzpicture}
+
+\begin{tikzpicture}
+	\matrix[matrix of nodes, draw] {
+		A & B & C \\
+		D & E & F \\
+	};
+\end{tikzpicture}
+
+
+\begin{tikzpicture}
+	\matrix[matrix of nodes, draw, nodes = {circle, draw, minimum width=2em}]{
+	A & B & C \\
+	D & E & |[red]| F \\
+	};
+\end{tikzpicture}
+
+
+\begin{tikzpicture}
+	\matrix(m) [matrix of nodes, row sep=2em, column sep=2em, nodes={text depth=1ex, text height=2ex}]
+	{
+		tex & dvi & ps \\
+		    & pdf &    \\
+	};
+
+	\draw [-stealth]
+	(m-1-1) edge (m-1-2)
+	(m-1-2) edge (m-1-3)
+	(m-1-1) edge (m-2-2)
+	(m-1-2) edge (m-2-2)
+	(m-1-3) edge (m-2-2)
+	;
 \end{tikzpicture}
 
 \end{document}
