--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 % !TeX program = LuaLaTeX
 \documentclass{article}
 
+\usepackage{hvlogos}
 \usepackage{xcolor}
 \usepackage{float}
 % Load the LuaTeX packages
@@ -14,7 +15,9 @@
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{shapes}
 \usetikzlibrary{graphs,graphdrawing}
-\usegdlibrary {trees}
+\usetikzlibrary{trees}
+\usetikzlibrary{quotes}
+\usetikzlibrary{matrix}
 
 \usepackage[colorlinks=true]{hyperref}
 
@@ -34,48 +37,48 @@
 \section{Example transformer}
 
 \begin{figure}[H]
-    \centering
-    \includestandalone[width=\textwidth]{transformer}
-    \caption{transformer \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/transformer.tex}{code} }
-    \label{fig:transformer}
+	\centering
+	\includestandalone[width=\textwidth]{transformer}
+	\caption{transformer \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/transformer.tex}{code} }
+	\label{fig:transformer}
 \end{figure}
 
 \section{Example colored diagram}
 
 \begin{figure}[H]
-    \centering
-    \includestandalone[width=\textwidth]{colored_diagram}
-    \caption{colored diagram \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/colored_diagram.tex}{code} }
-    \label{fig:colored diagram}
+	\centering
+	\includestandalone[width=\textwidth]{colored_diagram}
+	\caption{colored diagram \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/colored_diagram.tex}{code} }
+	\label{fig:colored diagram}
 \end{figure}
 
 \section{Example tree1}
 
 \begin{figure}[H]
-    \centering
-    \includestandalone[width=\textwidth]{tree1}
-    \caption{tree1 \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/tree1.tex}{code} }
-    \label{fig:tree1}
+	\centering
+	\includestandalone[width=\textwidth]{tree1}
+	\caption{tree1 \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/tree1.tex}{code} }
+	\label{fig:tree1}
 \end{figure}
 
 \section{Example qual graph}
 
 \begin{figure}[H]
-    \centering
-    \includestandalone[width=\textwidth]{qual_graph}
-    \caption{qual graph \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/qual_graph.tex}{code} }
-    \label{fig:qual graph}
+	\centering
+	\includestandalone[width=\textwidth]{qual_graph}
+	\caption{qual graph \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/qual_graph.tex}{code} }
+	\label{fig:qual graph}
 \end{figure}
 
 \section{Example hello world}
 
 \begin{figure}[H]
-    \centering
-    \includestandalone[width=\textwidth]{hello_world}
-    \caption{hello world \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/hello_world.tex}{code} }
-    \label{fig:hello world}
+	\centering
+	\includestandalone[width=\textwidth]{hello_world}
+	\caption{hello world \href{https://github.com/cauliyang/learn_tikz/blob/main/gallery/hello_world.tex}{code} }
+	\label{fig:hello world}
 \end{figure}
-    % <!-- end content -->
+% <!-- end content -->
 
 
 \end{document}
