feat(graphics): Add shading functionality to tikz graphics

--- a/template/main.tex
+++ b/template/main.tex
@@ -19,6 +19,7 @@
 \usetikzlibrary{graphs,graphdrawing}
 \usetikzlibrary{trees}
 \usetikzlibrary{graphs}
+\usetikzlibrary{shadings}
 \usepackage{pgfplots}
 
 \usepackage[colorlinks=true]{hyperref}
