feat: Add tikz libraries mindmap and graphs

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,8 @@
 \usetikzlibrary{trees}
 \usetikzlibrary{quotes}
 \usetikzlibrary{matrix}
+\usetikzlibrary{mindmap}
+\usetikzlibrary{graphs}
 
 \usepackage[colorlinks=true]{hyperref}
 
@@ -82,14 +84,4 @@
 
 
 \end{document}
-
-
-
-
-
-
-
-
-
-
 
