--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usetikzlibrary{matrix}
 \usetikzlibrary{mindmap}
 \usetikzlibrary{graphs}
+\usetikzlibrary{intersections}
 
 \usepackage[colorlinks=true]{hyperref}
 
