style: Add tikzlibrary{intersections}

--- a/transformer.tex
+++ b/transformer.tex
@@ -3,6 +3,8 @@
 \usepackage{tikz}
 \usepackage{amsmath, amsfonts}
 \usetikzlibrary{arrows.meta}
+\usetikzlibrary{intersections}
+
 \begin{document}
 \begin{tikzpicture}
 
