style: remove unnecessary library import

--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \usepackage{luatextra}
 \usepackage{standalone}
 \usepackage{tkz-graph}
-\usepackage{amsmath,amssymb}
+\usepackage{amsmath}
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
@@ -20,7 +20,7 @@
 \usetikzlibrary{matrix}
 \usetikzlibrary{mindmap}
 \usetikzlibrary{graphs}
-\usetikzlibrary{intersections}
+\usegdlibrary {trees}
 
 \usepackage[colorlinks=true]{hyperref}
 
