feat: Add tikz package

--- a/template/main.tex
+++ b/template/main.tex
@@ -7,6 +7,7 @@
 \usepackage{fontspec}
 \usepackage{luatextra}
 \usepackage{standalone}
+\usepackage{tikz}
 \usepackage{tkz-graph}
 \usepackage{amsmath,amssymb}
 \usepackage{tikzpeople}
@@ -20,7 +21,13 @@
 \usetikzlibrary{trees}
 \usetikzlibrary{graphs}
 \usetikzlibrary{shadings}
-\usepackage{pgfplots}
+
+\usetikzlibrary{matrix}
+\usetikzlibrary{mindmap}
+\usetikzlibrary{graphs}
+\usetikzlibrary{intersections}
+\usegdlibrary{trees}
+
 
 \usepackage[colorlinks=true]{hyperref}
 
