build: Add pgfplots package

--- a/template/main.tex
+++ b/template/main.tex
@@ -11,6 +11,7 @@
 \usepackage{tkz-graph}
 \usepackage{amsmath,amssymb}
 \usepackage{tikzpeople}
+\usepackage{pgfplots}
 
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
@@ -26,6 +27,7 @@
 \usetikzlibrary{mindmap}
 \usetikzlibrary{graphs}
 \usetikzlibrary{intersections}
+
 \usegdlibrary{trees}
 
 
