feat: Add pgfplots fillbetween library

--- a/template/main.tex
+++ b/template/main.tex
@@ -12,6 +12,8 @@
 \usepackage{amsmath,amssymb}
 \usepackage{tikzpeople}
 \usepackage{pgfplots}
+\usepgfplotslibrary{fillbetween}
+\pgfplotsset{compat=1.18}
 
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
