style: Remove unnecessary tikz libraries and packages

--- a/template/main.tex
+++ b/template/main.tex
@@ -7,14 +7,13 @@
 \usepackage{fontspec}
 \usepackage{luatextra}
 \usepackage{standalone}
-\usepackage{tikz}
-\usepackage{tkz-graph}
 \usepackage{amsmath,amssymb}
 \usepackage{tikzpeople}
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
-\pgfplotsset{compat=1.18}
 
+\usepackage{tikz}
+\usepackage{tkz-graph}
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
@@ -22,13 +21,11 @@
 \usetikzlibrary{quotes}
 \usetikzlibrary{graphs,graphdrawing}
 \usetikzlibrary{trees}
-\usetikzlibrary{graphs}
 \usetikzlibrary{shadings}
-
 \usetikzlibrary{matrix}
 \usetikzlibrary{mindmap}
-\usetikzlibrary{graphs}
 \usetikzlibrary{intersections}
+\usetikzlibrary{tikzlings}
 
 \usegdlibrary{trees}
 
