style: remove unnecessary blank lines

--- a/template/main.tex
+++ b/template/main.tex
@@ -8,12 +8,15 @@
 \usepackage{luatextra}
 \usepackage{standalone}
 \usepackage{amsmath,amssymb}
-\usepackage{tikzpeople}
+
+\usepackage{hvlogos}
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
 
 \usepackage{tikz}
 \usepackage{tkz-graph}
+\usepackage{tikzpeople}
+
 \usetikzlibrary{calc}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
@@ -28,6 +31,11 @@
 \usetikzlibrary{tikzlings}
 
 \usegdlibrary{trees}
+
+
+
+
+
 
 
 \usepackage[colorlinks=true]{hyperref}
