style: Remove unnecessary blank lines and add compatibility setting

--- a/template/main.tex
+++ b/template/main.tex
@@ -12,6 +12,7 @@
 \usepackage{hvlogos}
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
+\pgfplotsset{compat=newest}
 
 \usepackage{tikz}
 \usepackage{tkz-graph}
