--- a/source/main.tex
+++ b/source/main.tex
@@ -8,7 +8,6 @@
 \usepackage{luatextra}
 \usepackage{standalone}
 \usepackage{amsmath,amssymb}
-
 \usepackage{hvlogos}
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
@@ -33,6 +32,9 @@
 
 \usegdlibrary{trees}
 
+\usepackage{graphicx}
+\graphicspath{{./source/}}
+
 \usepackage[colorlinks=true]{hyperref}
 
 % Set the main document font
@@ -48,206 +50,184 @@
 
 % <!-- begin content -->
 
-\section{Example transformer}
+\section{Case transformer}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{transformer}
-	\caption{transformer \href{https:/github.com/cauliyang/learn_tikz/blob/main/transformer.tex}{code} }
-	\label{fig:transformer}
+    \centering
+    \includestandalone[width=\textwidth]{transformer}
+    \caption{transformer \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/transformer.tex}{code} }
+    \label{fig:transformer}
 \end{figure}
 
-\section{Example arrow}
+\section{Case hello world}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{arrow}
-	\caption{arrow \href{https:/github.com/cauliyang/learn_tikz/blob/main/arrow.tex}{code} }
-	\label{fig:arrow}
+    \centering
+    \includestandalone[width=\textwidth]{hello_world}
+    \caption{hello world \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/hello_world.tex}{code} }
+    \label{fig:hello world}
 \end{figure}
 
-\section{Example hello world}
+\section{Case example1}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{hello_world}
-	\caption{hello world \href{https:/github.com/cauliyang/learn_tikz/blob/main/hello_world.tex}{code} }
-	\label{fig:hello world}
+    \centering
+    \includestandalone[width=\textwidth]{example1}
+    \caption{example1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/example1.tex}{code} }
+    \label{fig:example1}
 \end{figure}
 
-\section{Example example1}
+\section{Case image-overlay}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{example1}
-	\caption{example1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/example1.tex}{code} }
-	\label{fig:example1}
+    \centering
+    \includestandalone[width=\textwidth]{image-overlay}
+    \caption{image-overlay \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/image-overlay.tex}{code} }
+    \label{fig:image-overlay}
 \end{figure}
 
-\section{Example image-overlay}
+\section{Case shape}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{image-overlay}
-	\caption{image-overlay \href{https:/github.com/cauliyang/learn_tikz/blob/main/image-overlay.tex}{code} }
-	\label{fig:image-overlay}
+    \centering
+    \includestandalone[width=\textwidth]{shape}
+    \caption{shape \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/shape.tex}{code} }
+    \label{fig:shape}
 \end{figure}
 
-\section{Example shape}
+\section{Case plot3d}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{shape}
-	\caption{shape \href{https:/github.com/cauliyang/learn_tikz/blob/main/shape.tex}{code} }
-	\label{fig:shape}
+    \centering
+    \includestandalone[width=\textwidth]{plot3d}
+    \caption{plot3d \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/plot3d.tex}{code} }
+    \label{fig:plot3d}
 \end{figure}
 
-\section{Example plot3d}
+\section{Case qual graph}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{plot3d}
-	\caption{plot3d \href{https:/github.com/cauliyang/learn_tikz/blob/main/plot3d.tex}{code} }
-	\label{fig:plot3d}
+    \centering
+    \includestandalone[width=\textwidth]{qual_graph}
+    \caption{qual graph \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/qual_graph.tex}{code} }
+    \label{fig:qual graph}
 \end{figure}
 
-\section{Example qual graph}
+\section{Case plot function}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{qual_graph}
-	\caption{qual graph \href{https:/github.com/cauliyang/learn_tikz/blob/main/qual_graph.tex}{code} }
-	\label{fig:qual graph}
+    \centering
+    \includestandalone[width=\textwidth]{plot_function}
+    \caption{plot function \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/plot_function.tex}{code} }
+    \label{fig:plot function}
 \end{figure}
 
-\section{Example plot function}
+\section{Case tree2}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{plot_function}
-	\caption{plot function \href{https:/github.com/cauliyang/learn_tikz/blob/main/plot_function.tex}{code} }
-	\label{fig:plot function}
+    \centering
+    \includestandalone[width=\textwidth]{tree2}
+    \caption{tree2 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/tree2.tex}{code} }
+    \label{fig:tree2}
 \end{figure}
 
-\section{Example tree2}
+\section{Case curve}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{tree2}
-	\caption{tree2 \href{https:/github.com/cauliyang/learn_tikz/blob/main/tree2.tex}{code} }
-	\label{fig:tree2}
+    \centering
+    \includestandalone[width=\textwidth]{curve}
+    \caption{curve \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/curve.tex}{code} }
+    \label{fig:curve}
 \end{figure}
 
-\section{Example curve}
+\section{Case plot func}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{curve}
-	\caption{curve \href{https:/github.com/cauliyang/learn_tikz/blob/main/curve.tex}{code} }
-	\label{fig:curve}
+    \centering
+    \includestandalone[width=\textwidth]{plot_func}
+    \caption{plot func \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/plot_func.tex}{code} }
+    \label{fig:plot func}
 \end{figure}
 
-\section{Example plot func}
+\section{Case tree1}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{plot_func}
-	\caption{plot func \href{https:/github.com/cauliyang/learn_tikz/blob/main/plot_func.tex}{code} }
-	\label{fig:plot func}
+    \centering
+    \includestandalone[width=\textwidth]{tree1}
+    \caption{tree1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/tree1.tex}{code} }
+    \label{fig:tree1}
 \end{figure}
 
-\section{Example tree1}
+\section{Case latex graphics tikz book5}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{tree1}
-	\caption{tree1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/tree1.tex}{code} }
-	\label{fig:tree1}
+    \centering
+    \includestandalone[width=\textwidth]{latex_graphics_tikz_book5}
+    \caption{latex graphics tikz book5 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/latex_graphics_tikz_book5.tex}{code} }
+    \label{fig:latex graphics tikz book5}
 \end{figure}
 
-\section{Example latex graphics tikz book5}
+\section{Case latex graphics tikz book4}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{latex_graphics_tikz_book5}
-	\caption{latex graphics tikz book5 \href{https:/github.com/cauliyang/learn_tikz/blob/main/latex_graphics_tikz_book5.tex}{code} }
-	\label{fig:latex graphics tikz book5}
+    \centering
+    \includestandalone[width=\textwidth]{latex_graphics_tikz_book4}
+    \caption{latex graphics tikz book4 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/latex_graphics_tikz_book4.tex}{code} }
+    \label{fig:latex graphics tikz book4}
 \end{figure}
 
-\section{Example latex graphics tikz book4}
+\section{Case latex graphics tikz book1}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{latex_graphics_tikz_book4}
-	\caption{latex graphics tikz book4 \href{https:/github.com/cauliyang/learn_tikz/blob/main/latex_graphics_tikz_book4.tex}{code} }
-	\label{fig:latex graphics tikz book4}
+    \centering
+    \includestandalone[width=\textwidth]{latex_graphics_tikz_book1}
+    \caption{latex graphics tikz book1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/latex_graphics_tikz_book1.tex}{code} }
+    \label{fig:latex graphics tikz book1}
 \end{figure}
 
-\section{Example latex graphics tikz book1}
+\section{Case colored diagram}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{latex_graphics_tikz_book1}
-	\caption{latex graphics tikz book1 \href{https:/github.com/cauliyang/learn_tikz/blob/main/latex_graphics_tikz_book1.tex}{code} }
-	\label{fig:latex graphics tikz book1}
+    \centering
+    \includestandalone[width=\textwidth]{colored_diagram}
+    \caption{colored diagram \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/colored_diagram.tex}{code} }
+    \label{fig:colored diagram}
 \end{figure}
 
-\section{Example colored diagram}
+\section{Case neuron}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{colored_diagram}
-	\caption{colored diagram \href{https:/github.com/cauliyang/learn_tikz/blob/main/colored_diagram.tex}{code} }
-	\label{fig:colored diagram}
+    \centering
+    \includestandalone[width=\textwidth]{neuron}
+    \caption{neuron \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/neuron.tex}{code} }
+    \label{fig:neuron}
 \end{figure}
 
-\section{Example neuron}
+\section{Case latex graphics tikz book3}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{neuron}
-	\caption{neuron \href{https:/github.com/cauliyang/learn_tikz/blob/main/neuron.tex}{code} }
-	\label{fig:neuron}
+    \centering
+    \includestandalone[width=\textwidth]{latex_graphics_tikz_book3}
+    \caption{latex graphics tikz book3 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/latex_graphics_tikz_book3.tex}{code} }
+    \label{fig:latex graphics tikz book3}
 \end{figure}
 
-\section{Example latex graphics tikz book3}
+\section{Case latex graphics tikz book2}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{latex_graphics_tikz_book3}
-	\caption{latex graphics tikz book3 \href{https:/github.com/cauliyang/learn_tikz/blob/main/latex_graphics_tikz_book3.tex}{code} }
-	\label{fig:latex graphics tikz book3}
+    \centering
+    \includestandalone[width=\textwidth]{latex_graphics_tikz_book2}
+    \caption{latex graphics tikz book2 \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/latex_graphics_tikz_book2.tex}{code} }
+    \label{fig:latex graphics tikz book2}
 \end{figure}
 
-\section{Example latex graphics tikz book2}
+\section{Case diamond}
 
 \begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{latex_graphics_tikz_book2}
-	\caption{latex graphics tikz book2 \href{https:/github.com/cauliyang/learn_tikz/blob/main/latex_graphics_tikz_book2.tex}{code} }
-	\label{fig:latex graphics tikz book2}
+    \centering
+    \includestandalone[width=\textwidth]{diamond}
+    \caption{diamond \href{https:/github.com/cauliyang/learn_tikz/blob/main/source/source/diamond.tex}{code} }
+    \label{fig:diamond}
 \end{figure}
-
-\section{Example diamond}
-
-\begin{figure}[H]
-	\centering
-	\includestandalone[width=\textwidth]{diamond}
-	\caption{diamond \href{https:/github.com/cauliyang/learn_tikz/blob/main/diamond.tex}{code} }
-	\label{fig:diamond}
-\end{figure}
-% <!-- end content -->
-
-
+    % <!-- end content -->
 \end{document}
-
-
-
-
-
-
-
-
-
-
-
